RESOLVED FIXED272322
The contents layer of placeholder canvas of OffscreenCanvas is lost when switching off the tab
https://bugs.webkit.org/show_bug.cgi?id=272322
Summary The contents layer of placeholder canvas of OffscreenCanvas is lost when swit...
Kimmo Kinnunen
Reported 2024-04-08 05:10:03 PDT
The contents layer of placeholder canvas of OffscreenCanvas is lost when switching off the tab
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-08 05:10:13 PDT
Kimmo Kinnunen
Comment 2 2024-04-08 05:12:31 PDT
1. Load any transferControlToOffscreen() test 2. Let it load 3. Switch to another tab 4. Switch back Observe the contents gone file:///Users/kkinnunen/WebKit/OpenSource/LayoutTests/fast/canvas/offscreen-scaling.html
Kimmo Kinnunen
Comment 3 2024-04-16 03:03:23 PDT
EWS
Comment 4 2024-04-17 23:00:27 PDT
Committed 277654@main (106c6c814493): <https://commits.webkit.org/277654@main> Reviewed commits have been landed. Closing PR #27316 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.