The contents layer of placeholder canvas of OffscreenCanvas is lost when switching off the tab https://bugs.webkit.org/show_bug.cgi?id=272322 rdar://126070648

Reviewed by Matt Woodrow.

When layer becomes unreachable, its contents is cleared. Clear also
the async contents id. When the layer becomes reachable, the content
can be reassigned.

* LayoutTests/TestExpectations:
* LayoutTests/fast/canvas/offscreen-visibility-change-expected.html: Added.
* LayoutTests/fast/canvas/offscreen-visibility-change.html: Added.
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeHost.mm:
(WebKit::RemoteLayerTreeHost::updateLayerTree):
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeNode.h:
(WebKit::RemoteLayerTreeNode::setAsyncContentsIdentifier):

Canonical link: https://commits.webkit.org/277654@main